Put in Contributions

--- a/D3/Deliverable3.tex
+++ b/D3/Deliverable3.tex
@@ -23,8 +23,8 @@
 
 % Title Details
 %------------------------------------------------------------------------------
-\title{Deliverable \#3 Template}
-\author{SE 3A04: Software Design II -- Large System Design}
+\title{Deliverable \#3 \\ SE 3A04: Software Design II -- Large System Design}
+\author{Group \#2 T02}
 \date{}                               
 %------------------------------------------------------------------------------
 
@@ -92,6 +92,28 @@ This section should provide a detailed class diagram for your application.
 \label{sec:division_of_labour}
 % Begin Section
 Include a Division of Labour sheet which indicates the contributions of each team member. This sheet must be signed by all team members.
+
+
+\begin{tabular}{ | l | l | }
+\hline
+	\textbf{Contributor Name} & \textbf{Contributions}  \\
+  	\hline
+  	Wenbin Yuan &  \\
+  	\hline
+  	Haris Khan &  \\
+  	\hline
+		Riley McGee & Draft of Class Diagram, 4.* \\
+  	\hline
+		Vishesh Gulatee &  \\
+  	\hline
+		James Taylor & Section 1.* \\
+  	\hline
+\end{tabular}
+\\
+\\
+By signing below you agree to the work divisions stated above correctly representing all contributions made:
+
+
 % End Section
 
 \newpage
