Preconditions for DCD

--- a/D3/Deliverable3.tex
+++ b/D3/Deliverable3.tex
@@ -128,7 +128,8 @@ This section should provide a sequence diagram for each use case of your applica
 \section{Detailed Class Diagram}
 \label{sec:detailed_class_diagram}
 % Begin Section
-This section should provide a detailed class diagram for your application.
+The following is a representation of the connections of classes which will will compose Climatar. \\
+\textbf{Note:} All edges which have no labels on their endpoints represent 1 to 1 relationships.
 % End Section
 
 \appendix
