Added DCD Images

--- a/D3/Deliverable3.tex
+++ b/D3/Deliverable3.tex
@@ -28,6 +28,12 @@
 \date{}                               
 %------------------------------------------------------------------------------
 
+% Graphics
+%------------------------------------------------------------------------------
+\graphicspath{{figures/}}
+
+%------------------------------------------------------------------------------
+
 % Document
 %------------------------------------------------------------------------------
 \begin{document}
@@ -124,12 +130,54 @@ This section should provide a state chart for each controller class for your app
 % Begin Section
 This section should provide a sequence diagram for each use case of your application.
 % End Section
-
+\pagebreak
 \section{Detailed Class Diagram}
 \label{sec:detailed_class_diagram}
 % Begin Section
 The following is a representation of the connections of classes which will will compose Climatar. \\
 \textbf{Note:} All edges which have no labels on their endpoints represent 1 to 1 relationships.
+
+%Images
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{dcdTL}
+    \caption{Class Diagram 1/5}
+    \label{fig:dcdTL}
+\end{figure}
+
+\pagebreak
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=12cm, keepaspectratio]{dcdF}
+    \caption{Class Diagram 2/5}
+    \label{fig:dcdTL}
+\end{figure}
+
+\pagebreak
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{dcdWS}
+    \caption{Class Diagram 3/5}
+    \label{fig:dcdTL}
+\end{figure}
+
+\pagebreak
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{dcdSS}
+    \caption{Class Diagram 4/5}
+    \label{fig:dcdTL}
+\end{figure}
+
+\pagebreak
+\begin{figure}[h]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{dcdNM}
+    \caption{Class Diagram 5/5}
+    \label{fig:dcdTL}
+\end{figure}
+
+\newpage
 % End Section
 
 \appendix
