Updates to contributions, rebuilt PDF.

--- a/D3/Deliverable3.tex
+++ b/D3/Deliverable3.tex
@@ -191,15 +191,15 @@ Include a Division of Labour sheet which indicates the contributions of each tea
 \hline
 	\textbf{Contributor Name} & \textbf{Contributions}  \\
   	\hline
-  	Wenbin Yuan &  \\
+  	Wenbin Yuan & Sequence Diagrams, 3.\\
   	\hline
-  	Haris Khan &  \\
+  	Haris Khan & Review of Section 1. \\
   	\hline
-		Riley McGee & Draft of Class Diagram, 4.* \\
+	Riley McGee & Draft of Class Diagram, 4.* \\
   	\hline
-		Vishesh Gulatee &  \\
+	Vishesh Gulatee & State Chart Diagrams, 2. \\
   	\hline
-		James Taylor & Section 1.* \\
+	James Taylor & Section 1. Reviews of Sections 2 and 3. \\
   	\hline
 \end{tabular}
 \\
