Added sequence diagrams to document.

--- a/D3/Deliverable3.tex
+++ b/D3/Deliverable3.tex
@@ -12,6 +12,7 @@
 \usepackage{graphicx}
 \usepackage{extarrows}
 \usepackage{setspace}
+\usepackage{float}
 %------------------------------------------------------------------------------
 
 % Header and Footer
@@ -128,7 +129,61 @@ This section should provide a state chart for each controller class for your app
 \section{Sequence Diagrams}
 \label{sec:sequence_diagrams}
 % Begin Section
-This section should provide a sequence diagram for each use case of your application.
+
+\subsection{Use Case A}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{sda}
+    \caption{Use Case A}
+    \label{fig:sda}
+\end{figure}
+
+\subsection{Use Case B}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{sdb}
+    \caption{Use Case B}
+    \label{fig:sdb}
+\end{figure}
+
+\subsection{Use Case C}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{sdc}
+    \caption{Use Case C}
+    \label{fig:sdc}
+\end{figure}
+
+\subsection{Use Case D}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{sdd}
+    \caption{Use Case D}
+    \label{fig:sdd}
+\end{figure}
+
+\subsection{Use Case E}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{sde}
+    \caption{Use Case E}
+    \label{fig:sde}
+\end{figure}
+
+\subsection{Use Case F}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{sdf}
+    \caption{Use Case F}
+    \label{fig:sdf}
+\end{figure}
+
 % End Section
 \pagebreak
 \section{Detailed Class Diagram}
