Added short intro to use cases section.

--- a/D3/Deliverable3.tex
+++ b/D3/Deliverable3.tex
@@ -130,6 +130,10 @@ This section should provide a state chart for each controller class for your app
 \label{sec:sequence_diagrams}
 % Begin Section
 
+Each of Climatar's use cases is joined by an accompanying sequence diagram. This section includes said diagrams.
+
+\vspace{5mm}
+
 \subsection{Use Case A}
 \label{sub:overview}
 \begin{figure}[H]
