Added state chart diagrams. Updated sequence diagrams. Updates to contributions list.

--- a/D3/Deliverable3.tex
+++ b/D3/Deliverable3.tex
@@ -123,8 +123,98 @@ and variables for each said class.
 \section{State Charts for Controller Classes}
 \label{sec:state_charts_for_controller_classes}
 % Begin Section
-This section should provide a state chart for each controller class for your application.
+\subsection{FileHandlerController}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{FileHandlerCon}
+    \caption{FileHandlerController}
+    \label{fig:FileHandlerCon}
+\end{figure}
+
+\subsection{ApplicationController}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{AppControllerSC}
+    \caption{ApplicationController}
+    \label{fig:AppControllerSC}
+\end{figure}
+
+\subsection{MenuScreenController}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{MenuControll}
+    \caption{MenuScreenController}
+    \label{fig:MenuControll}
+\end{figure}
+
+\subsection{PlayScreenController}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{PlayScreenCon}
+    \caption{PlayScreenController}
+    \label{fig:PlayScreenCon}
+\end{figure}
+
+\subsection{WorldSimulator}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{WorldSim}
+    \caption{WorldSimulator}
+    \label{fig:WorldSim}
+\end{figure}
+
+\subsection{WeatherSystemController}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{Weather}
+    \caption{WeatherSystemController}
+    \label{fig:Weather}
+\end{figure}
+
+\subsection{GHGSystemController}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{GreenHouseGas}
+    \caption{GHGSystemController}
+    \label{fig:GreenHouseGas}
+\end{figure}
+
+\subsection{PoliticalSystemController}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{Pol}
+    \caption{PoliticalSystemController}
+    \label{fig:Pol}
+\end{figure}
+
+\subsection{NewsEventGenerator}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{NewsFeedGen}
+    \caption{NewsEventGenerator}
+    \label{fig:NewsFeedGen}
+\end{figure}
+
+\subsection{MapGenerator}
+\label{sub:overview}
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.8\textwidth , height=15cm, keepaspectratio]{MapGenerator}
+    \caption{MapGenerator}
+    \label{fig:MapGenerator}
+\end{figure}
 % End Section
+
+\pagebreak
 
 \section{Sequence Diagrams}
 \label{sec:sequence_diagrams}
@@ -252,13 +342,13 @@ Include a Division of Labour sheet which indicates the contributions of each tea
   	\hline
   	Wenbin Yuan & Sequence Diagrams, 3.\\
   	\hline
-  	Haris Khan & Review of Section 1. \\
+  	Haris Khan & Additions to Class Diagram, 4. Project boilerplate. Review of Section 1. \\
   	\hline
 	Riley McGee & Draft of Class Diagram, 4.* \\
   	\hline
 	Vishesh Gulatee & State Chart Diagrams, 2. \\
   	\hline
-	James Taylor & Section 1. Reviews of Sections 2 and 3. \\
+	James Taylor & Introduction, 1. Reviews of Sections 2 and 3. \\
   	\hline
 \end{tabular}
 \\
